[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "incident-triage-openenv"
version = "0.1.0"
description = "Real-world IT incident triage environment for OpenEnv."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.12",
  "uvicorn==0.34.1",
  "pydantic==2.11.3",
  "openai==1.75.0",
  "pyyaml==6.0.2",
  "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"
